--- a/src/pages/testimonials.astro
+++ b/src/pages/testimonials.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import Slider from "../components/Slider.astro";
 import { urlFor } from "../utils/image";
 import { loadQuery } from "../../sanity/lib/load-query";
-import { decodeHtmlEntities, cleanText } from "../utils/textUtils";
+// import { decodeHtmlEntities, cleanText } from "../utils/textUtils";
 
 interface Testimonial {
   slug: string;
