--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -123,95 +123,15 @@ const about =
         <PortableText value={about.body2} />
       </div>
     </div>
-    <div class="hex-grid">
+    <div class="lg:columns-3 sm:columns-2 gap-4">
       {
         about.gallery.map((item) => (
-          <div class="hex">
-            <div class="hex-inner">
-              <img
-                src={urlFor(item).url()}
-                alt={item.alt || ""}
-                loading="lazy"
-              />
-            </div>
+          <div class="py-2 px-1 inline-block w-full group hover:scale-105 transition-transform duration-300">
+            <img src={urlFor(item).url()} alt={item.alt || ""} loading="lazy" class="hover:-skew-x-12 transition-transform duration-300 hover:rounded-md"/>
           </div>
         ))
       }
     </div>
   </div>
 </Layout>
-<style>
-  /* Hexagonal grid container */
-  .hex-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 80px auto;
-    max-width: 1200px;
-  }
 
-  /* Individual hexagon */
-  .hex {
-    position: relative;
-    height: 300px; /* Fixed width of the hexagon */
-    width: calc(300px * 1.1547); /* Maintain hexagon aspect ratio */
-    margin: -35px 5px; /* Adjust spacing to make hexagons touch */
-   
-    -webkit-clip-path: polygon(
-			50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%
-		);
- 	
-		clip-path: polygon(
-			50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%
-		); /* Hexagon shape */
-    overflow: hidden;
-    background-color: #f5f5f5; /* Fallback background color */
-  }
-
-  /* Image inside the hexagon */
-  .hex img {
-    aspect-ratio: 1;
-    --o: calc(50% * tan(-22.5deg));
-    -webkit-clip-path: polygon(
-			50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%
-		);
- 	
-		clip-path: polygon(
-			50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%
-		);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center; 
-    transition: transform 0.3s ease-in-out;
-    background-position: center center;
-
-    margin-bottom: 20px;
-  }
-
-  /* Hover effect for hexagon */
-  .hex:hover img {
-    transform: scale(1.1); /* Slight zoom on hover */
-  }
-
-
-  .hex:nth-child(1) {
-    margin-left: 270px;
-    margin-right: 250px;
-  }
-   .hex:nth-child(2){
-    margin-left: 100px;
-   }
-   .hex:nth-child(3) {
-    margin-right: 100px;
-   }
-   .hex:nth-child(7) {
-    margin-left: 100px;
-  }
-
-  .hex:nth-child(8) {
-    margin-right: 100px;
-   }
-  
-</style>
