--- a/src/pages/testimonials.astro
+++ b/src/pages/testimonials.astro
@@ -98,7 +98,7 @@ const cardsData = testimonials.quotes && typeof testimonials.quotes === 'object'
 ---
 
 <Layout title="Testimonials | Taft Hill Acres">
-  <div class="container mx-auto mt-8">
+  <div class="container mx-auto my-8">
     <h1 class="text-darktan text-5xl text-center my-8 font-extrabold">What Our Clients Say</h1>
     <div class="mt-42">
       <Slider {cardsData} />
