--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ const home = result && result.data ? {
         >
           {home.blurb}
         </p>
-        <p class="text-2xl w-full lg:w-2/5 text-left lg:pl-16">{home.blurb2}</p>
+        <p class="text-2xl w-full lg:w-2/5 text-center lg:text-left lg:pl-16">{home.blurb2}</p>
       </div>
     </div>
     <section class="w-full bg-tan mx-auto py-8 lg:p-8">
