--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,9 @@
 ---
-// https://docs.astro.build/en/guides/view-transitions/
-import { ViewTransitions } from "astro:transitions";
 import Header from "../components/Header.astro";
 import "../styles/global.css";
 import Footer from "../components/Footer.astro";
 // import {VisualEditing} from '@sanity/astro/visual-editing'
-import { Image } from 'astro:assets';
+import { Image } from "astro:assets";
 import Logo from "../../public/images/taft-hill-acres-logo.png";
 
 const { title } = Astro.props;
@@ -29,17 +27,16 @@ const { title } = Astro.props;
     />
 
     <title>{title}</title>
-    <ViewTransitions />
   </head>
   <body class="max-w-[1400px] mx-auto">
     <div>
       <Header />
       <Image
-    src={Logo}
-    alt="Taft Hill Acres logo"
-    class="max-w-[550px] w-1/2 lg:w-1/3 m-auto"
-    loading={"eager"}
-  />
+        src={Logo}
+        alt="Taft Hill Acres logo"
+        class="max-w-[550px] w-1/2 lg:w-1/3 m-auto"
+        loading={"eager"}
+      />
       <main>
         <slot />
         <!-- <VisualEditing enabled={visualEditingEnabled} zIndex={1000} /> -->
