--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -1,5 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro"
+import { Image } from "astro:assets";
+import Layout from "../layouts/Layout.astro";
 import { urlFor } from "../utils/image";
 import { ImageAsset } from "@sanity/types";
 import { loadQuery } from "../../sanity/lib/load-query";
@@ -8,28 +9,40 @@ interface Thanks {
   slug: string;
   title?: string;
   subtitle?: string;
-  mainImage?: ImageAsset[];
+  mainImage?: ImageAsset;
 }
 
-  const response = await loadQuery<Thanks[]>({
-    query: `*[_type == 'thankyou'] | order(_createdAt desc) {
+const response = await loadQuery<Thanks[]>({
+  query: `*[_type == 'thankyou'] | order(_createdAt desc) {
       slug,
       title,
       subtitle,
       mainImage
       
-    }`
-  });
+    }`,
+});
 
-
-  const result: Thanks[] = response.data;
+const result: Thanks[] = response.data;
 ---
+
 <Layout title="Thank you from Taft Hill Acres | Fort Collins Boarding Facility">
-  <div class="container mx-auto  mt-8"> 
+  <div class="container mx-auto mt-8">
     <div class="bg-tan text-center p-8">
-      <h2 class="text-green text-5xl  mb-4">{result[0]?.title}</h2>
+      <h2 class="text-green text-5xl mb-4">{result[0]?.title}</h2>
       <h3 class="text-darktan text-2xl">{result[0]?.subtitle}</h3>
-      <img class="lg:w-1/2 mx-auto" src={urlFor((result[0]?.mainImage as any).asset).url()} alt={result[0]?.title} />
-       </div>
-      </div>
+      {
+        result[0]?.mainImage && (
+          <Image
+            src={urlFor(result[0]?.mainImage).width(800).height(600).url()}
+            alt={result[0]?.title || "Thank you image"}
+            width={800}
+            height={600}
+            class="lg:w-1/2 mx-auto"
+             decoding="async"
+  loading="eager"
+          />
+        )
+      }
+    </div>
+  </div>
 </Layout>
