--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -146,7 +146,7 @@ width: 80%;
     color: white;
   }
   
-  .expanded {
+  .nav-links.expanded {
     display:grid;
     grid-template-columns: repeat(2, 1fr);
     padding-top: 50px;
@@ -316,5 +316,12 @@ width: 80%;
   100% {
     opacity: 0;
     transform: scale(1.15);
+  }
+}
+
+@media (max-width: 768px) {
+  .masonry img {
+    margin: 10px auto;
+    display: block;
   }
 }
