--- a/src/pages/training.astro
+++ b/src/pages/training.astro
@@ -166,7 +166,7 @@ const trainingDescription: TrainerDescription | null = trainingDescriptionResult
                   decoding="async"
                   width={1000}
                   height={750}
-                  class="m-auto h-[585px] w-full object-cover"
+                  class="m-auto max-h-[585px] w-full object-contain "
                   src={urlFor((item.trainerImage as any).asset).url()}
                   alt={`Trainer ${item.trainer.replace(/[^\x20-\x7E]/g, "")} working with horse`}
                   loading="lazy"
