--- a/public/styles/tailwind.css
+++ b/public/styles/tailwind.css
@@ -736,16 +736,16 @@ video {
   height: 350px;
 }
 
-.h-\[585px\] {
-  height: 585px;
-}
-
 .h-auto {
   height: auto;
 }
 
 .h-full {
   height: 100%;
+}
+
+.max-h-\[585px\] {
+  max-height: 585px;
 }
 
 .w-1\/2 {
@@ -868,6 +868,11 @@ video {
 
 .bg-white {
   background-color: rgba(255,255,255,1);
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -1025,12 +1030,6 @@ video {
 
 .text-white {
   color: rgba(255,255,255,1);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .blur {
