--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,18 +116,23 @@ width: 80%;
   /* nav styles */
 
 
-.nav-links {
-  z-index: 1000;
-  position: fixed;
-  /* padding: 32px 0px 32px 15px; */
-  top: 0;
-  left: 0;
-  background-color: rgba(236,235,232, 1);
-  display: none;
-  margin: 0;
-  @media screen and (max-width: 636px) {
-    border-bottom: 2px solid rgba(145,96,51,1); 
-  }
+  .nav-links {
+    z-index: 1000;
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: rgba(236,235,232, 1);
+    margin: 0;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+    @media screen and (max-width: 636px) {
+      height: 60vh;
+      border-bottom: 2px solid rgba(145,96,51,1); 
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      padding-top: 50px;
+    }
   }
   
   .nav-links a {
@@ -146,11 +151,12 @@ width: 80%;
     color: white;
   }
   
+
   .nav-links.expanded {
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-top: 50px;
-    /* flex-wrap: wrap; */
+    top: 0;
+    opacity: 1;
+    visibility: visible;
+    background-color: rgba(236,235,232, 1);
   }
   
   @media screen and (min-width: 636px) {
@@ -159,7 +165,6 @@ width: 80%;
       display: block;
       position: static;
       width: auto;
-      
       background: none;
     }
   
