--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,50 +4,62 @@
 @tailwind utilities;
 
 @layer utilities {
-  
-      .masonry {
-          column-gap: 1em;
-          column-count: 1;
-      }
-      .masonry-sm {
-          column-gap: 1em;
-          column-count: 2;
-      }
-      .masonry-md {
-          column-gap: 1em;
-          column-count: 3;
-      }
-      .break-inside {
-          break-inside: avoid;
-      }
+
+  .masonry {
+    column-gap: 1em;
+    column-count: 1;
+  }
+
+  .masonry-sm {
+    column-gap: 1em;
+    column-count: 2;
+  }
+
+  .masonry-md {
+    column-gap: 1em;
+    column-count: 3;
+  }
+
+  .break-inside {
+    break-inside: avoid;
+  }
 
 }
-.masonry2{
-  grid-template-columns: repeat( auto-fill, minmax( 200px, 1fr ) ); /* [2] Make columns adjust according to the available viewport */
+
+.masonry2 {
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  /* [2] Make columns adjust according to the available viewport */
   grid-auto-rows: 250px;
 }
+
 @layer base {
   html {
     font-family: 'Cormorant', serif;
   }
 }
+
 #menu__toggle {
   opacity: 0;
 }
-#menu__toggle:checked + .menu__btn > span {
+
+#menu__toggle:checked+.menu__btn>span {
   transform: rotate(45deg);
 }
-#menu__toggle:checked + .menu__btn > span::before {
+
+#menu__toggle:checked+.menu__btn>span::before {
   top: 0;
   transform: rotate(0deg);
 }
-#menu__toggle:checked + .menu__btn > span::after {
+
+#menu__toggle:checked+.menu__btn>span::after {
   top: 0;
   transform: rotate(90deg);
 }
-#menu__toggle:checked ~ .menu__box {
+
+#menu__toggle:checked~.menu__box {
   right: 0 !important;
 }
+
 .menu__btn {
   position: fixed;
   top: 50px;
@@ -57,9 +69,10 @@
   cursor: pointer;
   z-index: 2000;
 }
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
+
+.menu__btn>span,
+.menu__btn>span::before,
+.menu__btn>span::after {
   display: block;
   position: absolute;
   width: 100%;
@@ -67,14 +80,17 @@
   background-color: #616161;
   transition-duration: .25s;
 }
-.menu__btn > span::before {
+
+.menu__btn>span::before {
   content: '';
   top: -8px;
 }
-.menu__btn > span::after {
+
+.menu__btn>span::after {
   content: '';
   top: 8px;
 }
+
 /* .menu__box {
   z-index: 1000;
   display: flex;
@@ -108,140 +124,151 @@ width: 80%;
   text-decoration: none;
   transition-duration: .25s;
 }
+
 .menu__item:hover {
   background-color: #CFD8DC;
 }
 
 
-  /* nav styles */
+/* nav styles */
 
 
+.nav-links {
+  z-index: 1000;
+  position: fixed;
+  top: -100%;
+  left: 0;
+  background-color: rgba(236, 235, 232, 1);
+  margin: 0;
+  width: 100%;
+
+  @media screen and (max-width: 636px) {
+    height: 45vh;
+    border-bottom: 2px solid rgba(145, 96, 51, 1);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 55px;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+.nav-links a {
+  display: block;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.nav-links a:hover,
+.nav-links a:focus {
+  background-color: #1b2911;
+  color: white;
+}
+
+
+.nav-links.expanded {
+  top: 0;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgba(236, 235, 232, 1);
+}
+
+@media screen and (min-width: 636px) {
   .nav-links {
-    z-index: 1000;
-    position: fixed;
-    top: -100%;
-    left: 0;
-    background-color: rgba(236,235,232, 1);
-    margin: 0;
-    width: 100%;
-   
-    @media screen and (max-width: 636px) {
-      height: 45vh;
-      border-bottom: 2px solid rgba(145,96,51,1); 
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      padding-top: 55px;
-      opacity: 0;
-      transition: all 0.3s ease-in-out;
-    }
-  }
-  
-  .nav-links a {
+    /* margin-left: 5em; */
     display: block;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-  
-  .nav-links a:hover,
-  .nav-links a:focus {
-    background-color: #1b2911;
-    color: white;
-  }
-  
-
-  .nav-links.expanded {
-    top: 0;
-    opacity: 1;
-    visibility: visible;
-    background-color: rgba(236,235,232, 1);
-  }
-  
-  @media screen and (min-width: 636px) {
-    .nav-links {
-      /* margin-left: 5em; */
-      display: block;
-      position: static;
-      width: auto;
-      background: none;
-    }
-  
-    .nav-links a {
-      display: inline-block;
-      padding: 10px 0px;
-    }
-    .hamburger {
-      display: none;
-    }
+    position: static;
+    
+    width: auto;
+    background: none;
   }
 
-  .trainer a {
-    text-decoration: none;
-    border-bottom: 2px solid rgba(145,96,51,1);
+  .nav-links a {
+    display: inline-block;
+    padding: 10px 20px;
   }
-  .trainer a:hover {
-    background-color: rgba(145,96,51,1);
-    color: white;
-    padding: 2px;
-    transition: ease-in-out 0.3s;
-  }
+
   .hamburger {
-    cursor: pointer;
-    width: 45px;
-    z-index: 1005;
-    position: fixed;
-    right: 25px;
-    top: -5px;
+    display: none;
   }
+}
 
-  .ham {
-    height: 60px !important;
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent;
-    transition: transform 400ms;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    /* padding-top: 38px; */
-  background-color: rgba(145,96,51,1);
-  }
+.trainer a {
+  text-decoration: none;
+  border-bottom: 2px solid rgba(145, 96, 51, 1);
+}
 
-  .hamRotate180.active {
-    transform: rotate(180deg);
-  }
-  .line {
-    fill:none;
-    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-    stroke:#000;
-    stroke-width: 3.5;
-    stroke-linecap:round;
-  }
-  
-  
-  .ham3 .top {
-    stroke-dasharray: 40 130;
-  }
-  .ham3 .middle {
-    stroke-dasharray: 40 140;
-  }
-  .ham3 .bottom {
-    stroke-dasharray: 40 205;
-  }
-  .ham3.active .top {
-    stroke-dasharray: 75 130;
-    stroke-dashoffset: -63px;
-  }
-  .ham3.active .middle {
-    stroke-dashoffset: -102px;
-  }
-  .ham3.active .bottom {
-    stroke-dasharray: 110 205;
-    stroke-dashoffset: -86px;
-  }
+.trainer a:hover {
+  background-color: rgba(145, 96, 51, 1);
+  color: white;
+  padding: 2px;
+  transition: ease-in-out 0.3s;
+}
+
+.hamburger {
+  cursor: pointer;
+  width: 45px;
+  z-index: 1005;
+  position: fixed;
+  right: 25px;
+  top: -5px;
+}
+
+.ham {
+  height: 60px !important;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* padding-top: 38px; */
+  background-color: rgba(145, 96, 51, 1);
+}
+
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+
+.line {
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: #000;
+  stroke-width: 3.5;
+  stroke-linecap: round;
+}
+
+
+.ham3 .top {
+  stroke-dasharray: 40 130;
+}
+
+.ham3 .middle {
+  stroke-dasharray: 40 140;
+}
+
+.ham3 .bottom {
+  stroke-dasharray: 40 205;
+}
+
+.ham3.active .top {
+  stroke-dasharray: 75 130;
+  stroke-dashoffset: -63px;
+}
+
+.ham3.active .middle {
+  stroke-dashoffset: -102px;
+}
+
+.ham3.active .bottom {
+  stroke-dasharray: 110 205;
+  stroke-dashoffset: -86px;
+}
 
 .card {
   @apply relative h-[200px] w-[180px] -mx-6;
@@ -250,12 +277,11 @@ width: 80%;
 
 .card-face {
   @apply absolute bottom-0 left-0 right-0 top-0 overflow-hidden rounded-lg;
-  background: linear-gradient(-135deg, 
-    hsl(var(--card-hue), 100%, 80%),
-    hsl(var(--card-hue), 90%, 45%)
-  );
+  background: linear-gradient(-135deg,
+      hsl(var(--card-hue), 100%, 80%),
+      hsl(var(--card-hue), 90%, 45%));
   box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.15),
-              inset 0 0 0 2px hsla(var(--card-hue), 100%, 80%, 0.75);
+    inset 0 0 0 2px hsla(var(--card-hue), 100%, 80%, 0.75);
   transform: translateY(var(--card-offset)) rotate(var(--card-rotation));
   transition: transform 800ms cubic-bezier(0.19, 1, 0.22, 1);
   border-radius: 0px;
@@ -284,6 +310,7 @@ width: 80%;
 .card.active .card-face {
   transform: translateY(-100px) rotate(0deg) scale(2);
   width: 300px;
+
   @media (max-width: 640px) {
     max-width: 50vw;
     margin: 0 auto;
@@ -311,6 +338,7 @@ width: 80%;
     opacity: 0.9;
     transform: scale(1);
   }
+
   100% {
     opacity: 0;
     transform: scale(1.15);
